# kedro

./: Dockerfile  README.md  docker-compose.yml  dvc.yaml
airflow/config/: airflow.cfg
olympicskedro/: .gitignore  README.md  dvc.yaml  pyproject.toml  requirements.txt
olympicskedro/conf/base/: catalog.yml
olympicskedro/data/: 01_raw.dvc  02_intermediate.dvc  06_models.dvc  07_model_output.dvc
olympicskedro/notebooks/: 01_Business_Undertanding.ipynb  01_classification_analysis.ipynb  02_Data_Understanding.ipynb  02_regression_analysis.ipynb  03_Business_Undertanding.ipynb  03_Data_Preparation.ipynb  03_models_comparison.ipynb  EA1.ipynb  Olympic.ipynb
olympicskedro/src/olympicskedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
olympicskedro/src/olympicskedro/docs/: architecture.md  unsupervised_analysis.md
olympicskedro/src/olympicskedro/pipelines/classification/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/data_engineering/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/innovation/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/integration/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/pattern_analysis/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/regression/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/reporting/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/reporting_unsupervised/: nodes.py  pipeline.py
olympicskedro/src/olympicskedro/pipelines/unsupervised_learning/: nodes.py  pipeline.py
(+1 files in other folders)
